# KomatsuSimulator

./: .gitignore  Dockerfile  LICENSE  README.md  komatsu.repos
KomatsuSimulator/: .gitignore
KomatsuSimulator/Assets/: .fuse_hidden00001d4e00000001  msgbrowser_settings.asset
KomatsuSimulator/Assets/Materials/: ConstructionVehiclesMaterial.mat  ConstructionWorkerBody.mat  ConstructionWorkerHat.mat  DryGroundRocks.terrainlayer  GravelGround01.terrainlayer  RockGround 1.terrainlayer  RockGround.terrainlayer  RockGround02.terrainlayer  RocksGround03.terrainlayer  RoiMaterial.mat  TerrainPhysicsMaterial.physicMaterial
KomatsuSimulator/Assets/Objects/: BasicTerrain.asset  MobileHome.fbx  Scenario1Terrain.asset  Scenario2Terrain.asset  SimpleFlatTerrain.asset
KomatsuSimulator/Assets/Objects/Pete/: PeteAnimatorController.controller  Walking.anim
KomatsuSimulator/Assets/Plugins/: AsyncTextureReader.cs
KomatsuSimulator/Assets/Plugins/AsyncGPUReadbackPlugin/: readme
KomatsuSimulator/Assets/Prefabs/: ConstructionWorker.prefab  DumpTruck.prefab  Dumping Truck.prefab  EventSystem.prefab  Marker.prefab  MobileHome.prefab  Person.prefab  ROSConnectionPrefab.prefab  Road Roller.prefab  RoiBox.prefab  RoiDisplay.prefab  UI.prefab
KomatsuSimulator/Assets/Prefabs/Machines/: Bull Dozer 1.prefab  Bull Dozer 2.prefab  Cement Mixer.prefab  Crane.prefab  DumpTruck.prefab  Shovel.prefab
KomatsuSimulator/Assets/Prefabs/Sensors/: GroundTruthSensor.prefab  Lidar1.prefab  Position.prefab  RectangleCollisionROI.prefab
KomatsuSimulator/Assets/Prefabs/TrafficSigns/: DetourSign 1.prefab  LeftTurnSign.prefab  RegPylon.prefab  RightTurnSign.prefab  SpeedLimit25Sign.prefab  StopSign.prefab
KomatsuSimulator/Assets/Resources/: ROSConnectionPrefab.prefab
KomatsuSimulator/Assets/RosMessages/DangerZone/msg/: ObstacleArrayMsg.cs  ObstacleMsg.cs  SnapshotTriggeredMsg.cs  TriggeredTopicDetailsMsg.cs
KomatsuSimulator/Assets/RosMessages/KomatsuSimulator/msg/: ObstacleArrayMsg.cs  ObstacleMsg.cs
KomatsuSimulator/Assets/RosMessages/Vision/msg/: BoundingBox3DMsg.cs  Detection3DArrayMsg.cs  Detection3DMsg.cs  ObjectHypothesisMsg.cs  ObjectHypothesisWithPoseMsg.cs
KomatsuSimulator/Assets/Scenes/: MostSimple.unity  PrefabCreator.unity  Scenario1.unity  Scenario2.unity  SimpleFlat.unity
KomatsuSimulator/Assets/Scripts/: Clock.cs  DetachedCameraController.cs  DetectorGroundTruthSensor.cs  DumpTruckController.cs  LaserScanSensor.cs  MachineController.cs  PersonController.cs  RoiVisualizer.cs  TimeStamp.cs  TriggerVisualizer.cs  UIController.cs
KomatsuSimulator/Assets/Scripts/Publishers/: ROSPointCloud2Publisher.cs  RosUtil.cs
KomatsuSimulator/Assets/Scripts/ROS/: TimeStamp.cs
KomatsuSimulator/Assets/Scripts/Sensors/: DetectorGroundTruthSensor.cs  ImagePublisher.cs  LaserScanSensor.cs  LidarSensor.cs  LidarSensor3D.cs  RGBCameraSensor.cs  RoiSpaces.cs  RosTestPublisher.cs  SensorAsyncGPUReadbackPlugin.cs  SensorBase.cs
KomatsuSimulator/Assets/Scripts/Sensors/RGBCameraSensor/: SensorRGBPostProcessMaterial.mat  SensorRGBPostProcessRenderTexture.asset  SensorRGBPostProcessShader.shader
KomatsuSimulator/Assets/Shaders/: LidarShader.shader
KomatsuSimulator/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset
Ros/src/danger_zone/: CMakeLists.txt  README.md  package.xml
Ros/src/danger_zone/inc/: danger_zone.hpp  gaia_db.hpp  idanger_zone.hpp  snapshot_client.hpp  zones.hpp
Ros/src/danger_zone/launch/: bridge_launch.py  full_launch.py  node_launch.py  sans_bridge_launch.py
Ros/src/danger_zone/src/: danger_zone.cpp  danger_zone.ddl  danger_zone.ruleset  gaia_db.cpp  snapshot_client.cpp  zones.cpp
Ros/src/danger_zone_msgs/: .gitignore  CMakeLists.txt  package.xml
Ros/src/danger_zone_msgs/msg/: ObstacleArray.msg
Ros/src/retro_log/: CMakeLists.txt  README.md  package.xml
Ros/src/retro_log/launch/: retro_log_launch.py
Ros/src/retro_log/src/: retro_log.cpp
RosMsgs/: Obstacle.msg  ObstacleArray.msg
