<?xml version="1.0"?>
<package format="3">
  <name>danger_zone_msgs</name>
  <version>1.0.0</version>
  <description>
      Messages for danger_zone Komatsu demo.
  </description>

  <maintainer email="mark@gaiaplatform.io">Mark West at Gaia Platform</maintainer>
  <url type="website">http://www.gaiaplatform.io</url>
  <license>MIT</license>

  <url type="repository">https://github.com/gaia-platform/KomatsuSimulator</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

